Fix spacing between buttons and webview in detail view

--- a/ChallengeApp/ChallengeApp/styles.css
+++ b/ChallengeApp/ChallengeApp/styles.css
@@ -110,7 +110,7 @@ h4 {
 
 article {
 	border-bottom: 1px solid #d8d8d8;
-	padding: 10px 20px 0 20px;
+	padding: 0px 20px 0 20px;
 	margin: 10px 0;
 }
 
